[package]
name = "git-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
anyhow = "1.0.100"
git2 = "0.20.2"
serde = "1.0.228"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3"
indicatif = "0.18.0"

[dev-dependencies]
tempfile = "3.14.0"
tracing-subscriber = "0.3"
